--- a/TipsAndTricks/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
+++ b/TipsAndTricks/TatBlog.WebApp/Views/Shared/_SideBar.cshtml
@@ -2,7 +2,7 @@
     <partial name="_SearchForm" />
 
     @await Component.InvokeAsync("CategoriesWidget")
-
+    @await Component.InvokeAsync("FeaturedPostsWidget")
     <h1 class="text-success mb-2">
         Bài viết nổi bật
     </h1>
@@ -12,4 +12,5 @@
     <h1 class="text-success mb-2">
         Tag Cloud
     </h1>
+
 </div>
