--- a/src/TipsAndTricks/TatBlog.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/src/TipsAndTricks/TatBlog.WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -1,41 +1,37 @@
 ﻿<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["PageTitle"] - Tips & Tricks Blog</title>
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="~/css/main.css" asp-append-version="true" />
+    <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="~/css/main.css" rel="stylesheet" asp-append-version="true" />
+
     @await RenderSectionAsync("styles", required: false)
 </head>
 <body>
-
-
+    @*Thanh tiêu đề, logo, menu*@
     <partial name="_Navbar" />
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-9">
-
-                @RenderBody()
-            </div>
-            <div class="col-3 border-start">
-
-                <partial name="_SideBar" />
-            </div>
-        </div>
+        @*Phần nội dung chính*@
+        @RenderBody()
     </div>
+
     <footer class="border-top footer text-muted">
         <div class="container-fluid text-center">
             &copy; 2023 Tips & Tricks Blog
         </div>
     </footer>
-    <script src="/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/main.js" asp-append-version="true"></script>
 
     @await RenderSectionAsync("scripts", required: false)
 </body>
 </html>
+
