--- a/src/TipsAndTricks/TatBlog.WebApp/Views/Shared/Components/Top4AuthorsWidget/Default.cshtml
+++ b/src/TipsAndTricks/TatBlog.WebApp/Views/Shared/Components/Top4AuthorsWidget/Default.cshtml
@@ -1,18 +1,18 @@
-﻿@model IList<CategoryItem>
+﻿@model IList<AuthorItem>
 
 <div class="mb-4">
     <h3 class="text-success mb-2">
-        Các chủ đề
+        Top 4 tác giả tiêu biểu
     </h3>
     <ul class="list-group">
         @foreach (var item in Model) {
             <li class="list-group-item">
                 <a class="text-dark fw-bold text-decoration-none" asp-controller="Blog"
-               asp-action="Category"
+               asp-action="Author"
                asp-route-slug="@item.UrlSlug"
-                   title="@item.Description">
-                    @item.Name
-                    <span class="text-muted fw-normal">(@item.PostCount)</span>
+                   title="@item.FullName">
+                    @item.FullName
+                    <span class ="text-muted fw-normal">(@item.PostCount)</span>
                 </a>
             </li>
         }
