--- a/src/TipsAndTricks/TatBlog.WebApp/Areas/Admin/Views/Authors/_AuthorsPane.cshtml
+++ b/src/TipsAndTricks/TatBlog.WebApp/Areas/Admin/Views/Authors/_AuthorsPane.cshtml
@@ -23,12 +23,12 @@
         <a asp-area="Admin"
            asp-controller="Authors"
            asp-action="Edit"
-           class="btn text-success">
+           class="btn btn-success">
             Thêm mới
         </a>
         <a asp-area="Admin"
            asp-controller="Authors"
-           asp-action="Index" class="btn text-outline-danger">
+           asp-action="Index" class="btn btn-outline-danger">
             Bỏ lọc
         </a>
     </div>
